--- a/src/App.css
+++ b/src/App.css
@@ -2,27 +2,15 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.main-container {
+  margin-top: 65px;
+  box-sizing: border-box;
+  /* display: flex;
+  flex-direction: column;
+  align-content: center; */
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.cart-table {
+  width: 700px;
+  /* text-align: center */
 }
