--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -3,8 +3,8 @@
   box-sizing: border-box;
   margin: 12px;
   width: 350px;
-  max-height: 400px;
-  min-height: 400px;
+  /* max-height: 332px;
+  min-height: 332px; */
   border-radius: 8px;
   display: flex;
   flex-direction: column;
@@ -14,9 +14,38 @@
 .Products img {
   width: 300px;
   max-width: 300px;
+  height: 200px;
+  max-height: 200px;
   /* display: flex;
   flex-direction: column;
   align-items: center; */
   margin-left: auto;
   margin-right: auto
+}
+
+.button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px;
+  margin: 0;
+  border: none;
+  width: 100%;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 17px;
+}
+
+.button:hover {
+  background-color: #45a049;
+}
+
+.discription {
+  margin-bottom: 15px;
+  margin-top: 15px;
+}
+
+.currency {
+  font-size: 16px;
+  padding: 5px;
+  margin-bottom: 10px;
 }
