--- a/src/components/Checkout/Checkout.css
+++ b/src/components/Checkout/Checkout.css
@@ -83,6 +83,22 @@ label {
   background-color: #45a049;
 }
 
+.custom-btn-cancel {
+  background-color: rgb(151, 4, 4);
+  color: white;
+  padding: 12px;
+  margin: 10px 0;
+  border: none;
+  width: 100%;
+  border-radius: 3px;
+  cursor: pointer;
+  font-size: 17px;
+}
+
+.custom-btn-cancel:hover {
+  background-color: rgb(121, 4, 4);
+}
+
 span.price {
   float: right;
   color: grey;
