--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -39,6 +39,12 @@
   background-color: #45a049;
 }
 
+.button:active {
+  background-color: rgb(42, 104, 44);
+  transform: translateY((4px));
+  box-shadow: 0 2px #666;
+}
+
 .discription {
   margin-bottom: 15px;
   margin-top: 15px;
